--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,10 @@ body,h1,h2,h3,h5,h6
   padding: 0;
   border: 0;
 }
+body{
+  /*background-color: #B7AD7D; */
+  background-color: #FEF9E7;
+}
 /* tipo ID*/
 #encabezado
 {
@@ -18,7 +22,12 @@ body,h1,h2,h3,h5,h6
 #login-form
 {
   width: 300px;
-  margin: 0 auto;
+  margin: 20px auto;
+  background-color: white;
+  padding: 20px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 0 0 10px gray;
   /*
      margin-top: 10px;
      margin-right: 10px;
@@ -43,6 +52,7 @@ body,h1,h2,h3,h5,h6
 .text-center
 {
     text-align: center;
+    display: block;
 }
 .form-control label
 {
@@ -51,4 +61,13 @@ body,h1,h2,h3,h5,h6
 .form-control input[type=text], .form-control input[type=password]
 {
  width: 98%;
+}
+.form-control
+{
+  margin-bottom: 10px;
+}
+.form-control button
+{
+ width: 98%;
+ 
 }
